fixed main scrollbar on firefox

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -72,6 +72,12 @@
 }
 
 /* Global scrollbar styles */
+/* Firefox scrollbar styling */
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #888 rgb(20, 19, 19);
+}
+
 /* width */
 ::-webkit-scrollbar {
   width: 7px;
